--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!doctype html>
 <html>
 	<head>
+    <meta charset="utf-8">
 		<title>
 			GAME OF LIFE 2.0
 		</title>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/game.js"></script>
 	</head>
 	<body>
+    <canvas id="gamearea">
+
+    </canvas>
+
 		<script>
 			alert("TEST!");
 		</script>
