Include CSS into index

--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!doctype html>
 <html>
-	<head>
-    <meta charset="utf-8">
-		<title>
-			GAME OF LIFE 2.0
-		</title>
+<head>
+  <meta charset="utf-8">
+  <title>
+    GAME OF LIFE 2.0
+  </title>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/game.js"></script>
-	</head>
-	<body>
-    <canvas id="gamearea">
+  <link rel="stylesheet" type="text/css" href="css/base.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/game.js"></script>
+</head>
+<body>
 
-    </canvas>
+  <canvas id="gamearea">
 
-		<script>
-			alert("TEST!");
-		</script>
-		HI!
-	</body>
+  </canvas>
+
+</body>
 </html>
