Added gameArea div.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 
-  <canvas id="canvas">
-
-  </canvas>
-  
+	<div class="gameArea">
+	  <canvas id="gameCanvas">
+		  
+	  </canvas>
+	</div>
 </body>
 </html>
