Adjusted file structure, add test tiling

--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/game.js"></script>
 </head>
-<body>
+<body onload="gameInit();">
 
 	<div class="gameArea">
-	  <canvas id="gameCanvas">
-		  
-	  </canvas>
+	  <canvas id="gameCanvas"></canvas>
 	</div>
 
 
-<script>
-  window.onLoad=gameInit();
-</script>
 </body>
 </html>
