Fixed canvas to not auto strech

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body onload="gameInit();">
 
 	<div class="gameArea">
-	  <canvas id="gameCanvas"></canvas>
+	  <canvas id="gameCanvas" width="640" height="480"></canvas>
 	</div>
 
 
