--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/base.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/game.js"></script>
+  <script src="js/util.js"></script>
 </head>
 <body onload="gameInit();">
 
