--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <script src="js/game.js"></script>
 </head>
 <body onload="gameInit();">
-<img src="img/Logo.png" alt="Logo" height="276" width="538">
+<!-- <img src="img/Logo.png" alt="Logo" height="276" width="538">
+-->
 
 	<div class="gameArea">
 	  <canvas id="gameCanvas" width="640" height="480"></canvas>
