Added brief desc

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	  <canvas id="gameCanvas" width="640" height="480"></canvas>
 	</div>
 
-
+<p>
+The Game of Life 2.0 is a game based of John Conway's Game of Life, developed by a group of individuals at Code Day Portland.
+</p>
 </body>
 </html>
