--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <script src="js/game.js"></script>
 </head>
 <body onload="gameInit();">
+<div class="Logo">
 <img src="img/Logo.png" alt="Logo" height="180" width="640">
+</div>
 
 	<div class="gameArea">
 	  <canvas id="gameCanvas" width="640" height="480"></canvas>
