--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	  <canvas id="gameCanvas" width="640" height="480"></canvas>
 	</div>
 
-<p>
+<h1 style="text-align:center;">
 The Game of Life 2.0 is a game based of John Conway's Game of Life, developed by a group of individuals at Code Day Portland.
-</p>
+</h1>
 </body>
 </html>
