--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/util.js"></script>
   <script src="js/game.js"></script>
-  <link rel="shortcut icon" href="img/icon.ico" />
+<link rel="icon" href="img/icon.ico" type="image/ico"/>
 </head>
 <body onload="gameInit();">
 <img src="img/Logo.png" alt="Logo" width="640" height="180" style="margin:auto;display:block;" />
