Updated background and logo pos

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <link rel="icon" href="img/icon.ico" type="image/ico"/>
 </head>
 <body onload="gameInit();">
-<img src="img/Logo.png" alt="Logo" width="640" height="180" style="margin:auto;display:block;" />
+<div>
+  <img id="logo" src="img/Logo.png" alt="Logo" width="640" height="180" />
+</div>
 
-	<div class="gameArea">
-	  <canvas id="gameCanvas" width="640" height="480"></canvas>
-	</div>
+<div class="gameArea">
+  <canvas id="gameCanvas" width="640" height="480"></canvas>
+</div>
 
 </body>
 </html>
