Added kewl splash screen/about us page
Made a splash page that gives the user the option to play the game,
learn more abou tus, or learn more abou the event.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 <div class="gameArea">
   <canvas id="gameCanvas" width="640" height="480"></canvas>
 </div>
-
+<a href="splash.html"><strong>home</strong></a>
 </body>
 </html>
