--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                     <li>Isaac Archer, </li>
                     <li>Towaki Takikawa</li>
                 </ul>
-                <a href="splash.html">home</a>
+                <a href="splash.html">Home</a>
                 </div>
             </div>
         </div>
