--- a/splash.html
+++ b/splash.html
@@ -18,7 +18,7 @@
 
             <ul id="content">
                 <li><a href="index.html"><img src="img/button.png" alt="start game"></a></li>
-                <li><a href="about.html">About us</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="http://codeday.org">Codeday stuff</a></li>
             </ul>
             </div>
