--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 <div class="gameArea">
   <canvas id="gameCanvas" width="640" height="480"></canvas>
 </div>
-<a href="splash.html"><strong>home</strong></a>
+<a href="splash.html"><strong>Home</strong></a>
 </body>
 </html>
