--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </div>
 
 <div class="gameArea">
-  <canvas id="gameCanvas" width="640" height="480"></canvas>
+  <canvas id="gameCanvas" width="896" height="640"></canvas>
+  <div id="gameText">test</div>
 </div>
-<div class="gameText"></div>
 <a href="splash.html"><strong>Home</strong></a>
 </body>
 </html>
