--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <canvas id="gameCanvas" width="896" height="640"></canvas>
   <div id="gameText">test</div>
 </div>
-<center><input type=submit class=makegraph value="Make a Graph"></center><br>
+<center><input type=submit id="makegraph" value="Make a Graph"></center><br>
 <a href="splash.html"><strong>Home</strong></a>
 </body>
 </html>
