--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </div>
 
 <div class="gameArea">
+  <canvas id='minimap' width='200' height='200'></canvas>
   <canvas id="gameCanvas" width="896" height="640"></canvas>
   <div id="gameText">test</div>
 </div>
