--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <div class="gameArea">
   <canvas id="gameCanvas" width="896" height="640"></canvas>
+  <canvas id='minimap' width='200' height='200'></canvas>
   <div id="gameText">test</div>
 </div>
 <center><input type=submit id="makegraph" value="Make a Graph"></center><br>
