Added a restart button
ends the game, clears clicks var, redraws map.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <canvas id='minimap' width='200' height='200'></canvas>
   <div id="gameText">test</div>
 </div>
-<center><input type=submit id="makegraph" value="Make a Graph"></center><br>
+<center><input type="submit" id="makegraph" value="Make a Graph"> &nbsp;&nbsp;&nbsp; <input type="submit" id="restart" value="Restart"></center><br />
 <a href="splash.html"><strong>Home</strong></a>
 </body>
 </html>
