--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 <link rel="icon" href="img/icon.ico" type="image/ico"/>
 </head>
 <body onload="gameInit();">
-<div>
+<center>
+<div id="logodiv">
+  <canvas id='minimap' width='200' height='200'></canvas>
   <img id="logo" src="img/Logo.png" alt="Logo" width="538" height="276" />
 </div>
+</center>
 
 <div class="gameArea">
   <canvas id="gameCanvas" width="896" height="640"></canvas>
-  <canvas id='minimap' width='200' height='200'></canvas>
   <div id="gameText">test</div>
 </div>
 <center><input type="submit" id="makegraph" value="Make a Graph"> &nbsp;&nbsp;&nbsp; <input type="submit" id="restart" value="Restart"></center><br />
