--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@
         <div id="background">
             <div id="page">
                 <div id="description">
-                <strong>Game of Life 2.0:</strong>
+		<n>
+		</n>
+                <strong>Game of Life 2.0</strong>
                 <p>This is a version of the classic Game of Life, except
                 with a few changes.  Instead of two states, each cell
                 has 60.  This game was made by a team of 9 programmers
@@ -31,7 +33,9 @@
                     <li>Isaac Archer, </li>
                     <li>Towaki Takikawa</li>
                 </ul>
+		<p class="center">
                 <a href="splash.html">Home</a>
+		</p>
                 </div>
             </div>
         </div>
