--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
   <img id="logo" src="img/Logo.png" alt="Logo" width="538" height="276" />
 </div>
 </center>
+<center>
+<div class="left"></div>
 <div class="gameArea">
   <canvas id="gameCanvas" width="896" height="640"></canvas>
   <div id="gameText">test</div>
 <center><input type="submit" id="makegraph" value="Make a Graph"> &nbsp;&nbsp;&nbsp; <input type="submit" id="restart" value="Restart"></center><br />
 </div>
+</center>
 </body>
 </html>
