--- a/about.html
+++ b/about.html
@@ -23,8 +23,11 @@
 		<p>
 		</p>
                 <strong>Developers:</strong>
+		<p>
+		</p>
+	
 
-                <ul>
+                
                     <li>Aaron Celeste,</li> 
                     <li>Cezary Wojcik,</li> 
                     <li>Chance Zibolski, </li>
@@ -34,11 +37,14 @@
                     <li>Hamzah Khan, </li>
                     <li>Isaac Archer, </li>
                     <li>Towaki Takikawa</li>
-                </ul>
+                
+		<a href="http://portland.codeday.org/" target="_blank">
+ 		<img src="./img/codeday.png" />
+		</a>
+                </div>
 		<p class="center">
                 <a href="splash.html">Home</a>
 		</p>
-                </div>
             </div>
         </div>
     </body>
