added home button (seems properly centered)

--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
 <center><input type="submit" id="makegraph" value="Make a Graph"> &nbsp;&nbsp;&nbsp; <input type="submit" id="restart" value="Restart"></center><br />
 </div>
 </center>
+<p class="center">
+<a href="splash.html">HOME</a>
+</p>
 </body>
 </html>
