--- a/splash.html
+++ b/splash.html
@@ -16,9 +16,11 @@
                 <img id="logo" src="img/Logo.png" alt="Logo" width="538" height="276" />
             </div>
             <ul id="content">
+		<p class="center">
                 <li><a href="index.html"><img src="img/button.png" alt="start game"></a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="http://codeday.org">Codeday stuff</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="http://codeday.org">CODE DAY</a></li>
+		</p>
             </ul>
             </div>
         </div>
