Removed Junk, Seperated FIles.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <link rel="stylesheet" type="text/css" href="css/base.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/util.js"></script>
+  <script src="js/globals.js"></script>
+  <script src="js/map.js"></script>
   <script src="js/game.js"></script>
+  <script src="js/generator.js"></script>
 <link rel="icon" href="img/icon.ico" type="image/ico"/>
 </head>
 <body onload="gameInit();">
